@@ -1,28 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-comet-2.2.22-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-comet-2.2.22-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-framework-2.2.22-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-framework-2.2.22-SNAPSHOT.jar" sourcepath="lib/grizzly-framework-2.2.22-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-http-2.2.22-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-http-2.2.22-SNAPSHOT.jar" sourcepath="lib/grizzly-http-2.2.22-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-http-ajp-2.2.22-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-http-ajp-2.2.22-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-http-server-2.2.22-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-http-server-2.2.22-SNAPSHOT.jar" sourcepath="lib/grizzly-http-server-2.2.22-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-http-servlet-2.2.22-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-http-servlet-2.2.22-SNAPSHOT.jar" sourcepath="lib/grizzly-http-servlet-2.2.22-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-portunif-2.2.22-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-portunif-2.2.22-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-rcm-2.2.22-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-rcm-2.2.22-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-websockets-2.2.22-SNAPSHOT-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/grizzly-websockets-2.2.22-SNAPSHOT.jar" sourcepath="lib/grizzly-websockets-2.2.22-SNAPSHOT-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/grizzly-comet-2.2.22-SNAPSHOT.jar" sourcepath="source/grizzly-comet-2.2.22-SNAPSHOT-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/grizzly-framework-2.2.22-SNAPSHOT.jar" sourcepath="source/grizzly-framework-2.2.22-SNAPSHOT-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/grizzly-http-2.2.22-SNAPSHOT.jar" sourcepath="source/grizzly-http-2.2.22-SNAPSHOT-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/grizzly-http-ajp-2.2.22-SNAPSHOT.jar" sourcepath="source/grizzly-http-ajp-2.2.22-SNAPSHOT-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/grizzly-http-server-2.2.22-SNAPSHOT.jar" sourcepath="source/grizzly-http-server-2.2.22-SNAPSHOT-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/grizzly-http-servlet-2.2.22-SNAPSHOT.jar" sourcepath="source/grizzly-http-servlet-2.2.22-SNAPSHOT-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/grizzly-portunif-2.2.22-SNAPSHOT.jar" sourcepath="source/grizzly-portunif-2.2.22-SNAPSHOT-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/grizzly-rcm-2.2.22-SNAPSHOT.jar" sourcepath="source/grizzly-rcm-2.2.22-SNAPSHOT-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/grizzly-websockets-2.2.22-SNAPSHOT.jar" sourcepath="source/grizzly-websockets-2.2.22-SNAPSHOT-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/annotation-detector-3.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/atmosphere-compat-jbossweb-1.1.0-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/atmosphere-compat-tomcat-1.1.0-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/atmosphere-compat-tomcat7-1.1.0-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/atmosphere-runtime-1.1.0-SNAPSHOT-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/atmosphere-runtime-1.1.0-SNAPSHOT.jar" sourcepath="lib/atmosphere-runtime-1.1.0-SNAPSHOT-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gmbal-3.0.0-b023.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/management-api-3.0.0-b012.jar"/>
