@@ -9,25 +9,24 @@ bin.includes = META-INF/,\
                lib/atmosphere-compat-jbossweb-1.1.0-SNAPSHOT.jar,\
                lib/atmosphere-compat-tomcat-1.1.0-SNAPSHOT.jar,\
                lib/atmosphere-compat-tomcat7-1.1.0-SNAPSHOT.jar,\
-               lib/atmosphere-runtime-1.1.0-SNAPSHOT-sources.jar,\
                lib/atmosphere-runtime-1.1.0-SNAPSHOT.jar,\
                lib/annotation-detector-3.0.0.jar,\
-               lib/grizzly-comet-2.2.22-SNAPSHOT-sources.jar,\
+               source/grizzly-comet-2.2.22-SNAPSHOT-sources.jar,\
                lib/grizzly-comet-2.2.22-SNAPSHOT.jar,\
-               lib/grizzly-framework-2.2.22-SNAPSHOT-sources.jar,\
+               source/grizzly-framework-2.2.22-SNAPSHOT-sources.jar,\
                lib/grizzly-framework-2.2.22-SNAPSHOT.jar,\
-               lib/grizzly-http-2.2.22-SNAPSHOT-sources.jar,\
+               source/grizzly-http-2.2.22-SNAPSHOT-sources.jar,\
                lib/grizzly-http-2.2.22-SNAPSHOT.jar,\
-               lib/grizzly-http-ajp-2.2.22-SNAPSHOT-sources.jar,\
+               source/grizzly-http-ajp-2.2.22-SNAPSHOT-sources.jar,\
                lib/grizzly-http-ajp-2.2.22-SNAPSHOT.jar,\
-               lib/grizzly-http-server-2.2.22-SNAPSHOT-sources.jar,\
+               source/grizzly-http-server-2.2.22-SNAPSHOT-sources.jar,\
                lib/grizzly-http-server-2.2.22-SNAPSHOT.jar,\
-               lib/grizzly-http-servlet-2.2.22-SNAPSHOT-sources.jar,\
+               source/grizzly-http-servlet-2.2.22-SNAPSHOT-sources.jar,\
                lib/grizzly-http-servlet-2.2.22-SNAPSHOT.jar,\
-               lib/grizzly-portunif-2.2.22-SNAPSHOT-sources.jar,\
+               source/grizzly-portunif-2.2.22-SNAPSHOT-sources.jar,\
                lib/grizzly-portunif-2.2.22-SNAPSHOT.jar,\
-               lib/grizzly-rcm-2.2.22-SNAPSHOT-sources.jar,\
+               source/grizzly-rcm-2.2.22-SNAPSHOT-sources.jar,\
                lib/grizzly-rcm-2.2.22-SNAPSHOT.jar,\
-               lib/grizzly-websockets-2.2.22-SNAPSHOT-sources.jar,\
+               source/grizzly-websockets-2.2.22-SNAPSHOT-sources.jar,\
                lib/grizzly-websockets-2.2.22-SNAPSHOT.jar
 
